<resources>
    <string name="app_name">Nest</string>
    <string name="title_home">Home</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_assess">Assess</string>
    <string name="title_assessment">Assessment</string>
    <string name="title_assessment_test">Assessment Test</string>
    <string name="title_task">Task</string>
    <string name="title_new_task">Create New Task</string>
    <string name="title_profile">Profile</string>
    <string name="title_login_page">Welcome back! Glad to see you, again!</string>
    <string name="title_register_page">Hello! Register to get started</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_placeholder">John Doe</string>
    <string name="current_school_placeholder">Nama sekolah</string>
    <string name="birth_date">Birth Date</string>
    <string name="select_birth_date">Select Birth Date</string>
    <string name="birth_date_placeholder">dd-mm-yyyy</string>
    <string name="current_school">Current School</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_now">Login now</string>
    <string name="register">Register</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="failed_login_body">Invalid credential. Please check your input again!</string>
    <string name="short_password">Password must be at least 6 characters</string>
    <string name="continue_">Continue</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="register_success">Your account is successfully created. Please login to continue</string>
    <string name="update_profile_success">Your profile is successfully updated. You can now take the assessment test.</string>
    <string name="password_mismatch">Password doesn\'t match</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="empty_field">Field can\'t be empty</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="profile_picture">Profile picture</string>
    <string name="hello">Hello</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="searchbar_hint">Search major</string>
    <string name="recommended_major">Your recommended majors</string>
    <string name="all_major">Check out another majors</string>
    <string name="major_icon">Icon major</string>
    <string name="major_name">Major Name</string>
    <string name="major_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
    <string name="no_data">No data found</string>
    <string name="university_list">University List</string>
    <string name="potential_jobs">Potential Jobs</string>
    <string name="opinions_from_students">Opinions from Students</string>
    <string name="university_name">University Name</string>
    <string name="university_location">University Location</string>
    <string name="university_accreditation">"Accreditation: "</string>
    <string name="check_university">University page</string>
    <string name="back">Back</string>
    <string name="incomplete_profile">Profile Incomplete</string>
    <string name="complete_profile">Please make sure to complete your profile before taking the assessment test!</string>
    <string name="no_test">No test taken</string>
    <string name="last_education">Pendidikan saat ini</string>
    <string name="label_education_1">Kurang dari sekolah menengah (SMP, SD)</string>
    <string name="label_education_2">Sekolah menengah (SMA)</string>
    <string name="label_education_3">Sarjana</string>
    <string name="label_education_4">Pascasarjana</string>
    <string name="school_name">Nama Sekolah</string>

    <string name="eng_nat">Bahasa Inggris adalah bahasa ibu Anda?</string>
    <string name="english_native">English Native</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>

    <string name="agama">Agama</string>
    <string name="religion">Religion</string>
    <string name="label_religion_1">Agnostik</string>
    <string name="label_religion_2">Ateis</string>
    <string name="label_religion_3">Buddha</string>
    <string name="label_religion_4">Kristen (Katolik)</string>
    <string name="label_religion_5">Kristen (Mormon)</string>
    <string name="label_religion_6">Kristen (Protestan)</string>
    <string name="label_religion_7">Kristen (Lainnya)</string>
    <string name="label_religion_8">Hindu</string>
    <string name="label_religion_9">Yahudi</string>
    <string name="label_religion_10">Muslim</string>
    <string name="label_religion_11">Sikh</string>
    <string name="label_religion_12">Lainnya</string>

    <string name="gender">Gender</string>
    <string name="female">Perempuan</string>
    <string name="male">Laki-laki</string>
    <string name="others">Lainnya</string>
    <string name="submit">Submit</string>

    <string name="field_required">Please fill all the required field!</string>
    <string name="error_occurred">An error occurred. Please try again later!</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="unsaved_changes_confirmation">Are you sure you want to leave this page? Changes you made will not be saved.</string>
    <string name="discard">Discard</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="success_reset_password">Password reset successfully. Please login again!</string>
    <string name="error_reset_password">Failed to reset password</string>
    <string name="salary_range">Salary range:</string>

    <string name="take_assessment_test">Take Assessment Test</string>
    <string name="your_test_results">Your Test Results</string>
    <string name="assessment_test_description1">Welcome to the Major Assessment Test!</string>
    <string name="assessment_test_description2">This test will be conducted fully in Bahasa Indonesia. The test consists of 8 sections, each with several questions. Please answer all questions honestly based on your current situation to get the best and mose accurate result.</string>
    <string name="assessment_test_description3">The test takes about 30-45 minutes, so ensure you\'re in a comfortable environment where you can focus. At the end, you\'ll receive a result suggesting the major that best fits your profile.</string>
    <string name="assessment_test_description4">Ready to discover your recommended major?</string>
    <string name="assessment_test_description5">Let\'s get started!</string>
    <string name="begin">Begin</string>
    <string name="end_assessment_test">End Assessment Test</string>
    <string name="end_test_message">If you choose to end your test now, your progress won\'t be restored.</string>
    <string name="end_test">End Test</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="congratulations">Congratulations!</string>
    <string name="here_is_rec_major">Here is your recommended major</string>
    <string name="assessment_result">Assessment Result</string>
    <string name="done">Done</string>
    <string name="title_completed_task">Completed Task</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="completed">Completed</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_task_message">Are you sure you want to delete this task? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="back_button">Back Button</string>
    <string name="no_results_image">No test results image</string>
    <string name="no_tasks_image">No tasks available image</string>
    <string name="calendar">Calendar</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="find_out_now">Find out now</string>
    <string name="which_major">Want to know which major suits you the best?</string>
    <string name="productivity">Productivity</string>
    <string name="discover_majors">Discover Majors</string>
    <string name="see_all">See all</string>
</resources>