<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.nest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.bangkit.nest.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_assess"
        android:name="com.bangkit.nest.ui.assess.AssessFragment"
        android:label="@string/title_assess"
        tools:layout="@layout/fragment_assess" />

    <fragment
        android:id="@+id/navigation_task"
        android:name="com.bangkit.nest.ui.task.TaskFragment"
        android:label="Task"
        tools:layout="@layout/fragment_task" >
        <action
            android:id="@+id/action_taskFragment_to_addTaskFragment"
            app:destination="@id/addTaskFragment" />
    </fragment>

    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.bangkit.nest.ui.task.AddTaskFragment"
        android:label="Add_Task" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.nest.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>