<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.assess.question.BeginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_assessment_test"
            android:textAppearance="@style/TextAppearance.Heading3"
            android:textColor="@color/black"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/descriptionTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:gravity="center"
            android:text="@string/assessment_test_description1"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Body"
            />

        <TextView
            android:id="@+id/descriptionTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/assessment_test_description2"
            android:textAppearance="@style/TextAppearance.Body" />

        <TextView
            android:id="@+id/descriptionTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment_test_description3"
            android:textAppearance="@style/TextAppearance.Body"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/descriptionTextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/assessment_test_description4"
            android:textAppearance="@style/TextAppearance.Body" />

        <TextView
            android:id="@+id/descriptionTextView5"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/assessment_test_description5"
            android:textAppearance="@style/TextAppearance.Body" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.App.NegativeButton"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            app:backgroundTint="@color/gray_300" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/beginButton"
            style="@style/Widget.App.PositiveButton"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/begin" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
