<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recommendedMajorCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    style="?attr/materialCardViewOutlinedStyle"
    app:strokeColor="?attr/colorSecondary"
    app:cardBackgroundColor="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp"
        >

        <!-- Media -->
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            tools:srcCompat="@drawable/ic_education"
            tools:tint="@color/soft_red"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/major_icon"
            />

        <!-- Text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            >
            <TextView
                android:id="@+id/textViewUniversityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/university_name"
                android:textAppearance="@style/TextAppearance.Heading3"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/textUniversityLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/university_location"
                android:textColor="?attr/colorSecondaryVariant"
                android:gravity="center_vertical"
                />
            <TextView
                android:id="@+id/textViewUniversityAccreditation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/university_accreditation"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                />

            <Button
                style="@style/Widget.App.Button.Elevated"
                android:text="@string/check_university"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>