<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recommendedMajorCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    style="?attr/materialCardViewFilledStyle"
    app:cardBackgroundColor="?attr/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp"
        >

        <!-- Media -->
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_education"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/major_icon"
            />

        <!-- Text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            >
            <TextView
                android:id="@+id/textViewMajorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/major_name"
                android:textAppearance="@style/TextAppearance.Heading3"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/textViewMajorDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/major_description"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:lines="3"
                android:gravity="center_vertical"
                />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>